--- a/src/layout/view.module.css
+++ b/src/layout/view.module.css
@@ -118,9 +118,7 @@ li{
 }
 .portfolio{
     height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    margin: 20px;
     scroll-snap-align: start;
 
 }
