--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,18 @@
-#root{
-    padding: 0;
-    margin: 0;
-}
-.container{
-    display: flex;
-    background-color: #e3a302;
+body{
+margin: 0;
+padding: 0;
+
+
 }
 
+#root{
+    background: rgb(84,0,87);
+background: linear-gradient(0deg, rgba(84,0,87,1) 0%, rgba(0,0,0,1) 21%);
+color: #fff;
+font-family: "Unbounded", sans-serif;
+  
+}
+
+a{
+    color: #fff !important;
+}
