--- a/src/layout/footer.module.css
+++ b/src/layout/footer.module.css
@@ -11,29 +11,39 @@ max-width: 200px;
 }
 
 .footer_column{
-
+    width: 100%;
+    max-width: 300px;
 }
 
 .footer_phone a{
+    transition: 1s;
 font-size: 24px;
 font-weight: bold;
-color: rgb(0 0 0);
+color: rgb(0 0 0) !important;
 padding: 0px;
 text-decoration: none;
 text-transform: capitalize;
 }
-.footer_tg a{
+.footer_tg {
     margin-top: 10px;
-
+    transition: 1s;
     display: flex;
     align-items: center;
-    color: rgb(0 0 0);
+    color: rgb(0 0 0) !important;
     padding: 0px;
     text-decoration: none;
     text-transform: capitalize;
 }
-.footer_title{
+.footer_tg:first-child {
+    margin-right: 10px;
 
+
+}
+.footer_container_tg{
+    display: flex;
+}
+.footer_title{
+    color: rgb(0 0 0) !important;
 }
 .foorer_tg{
     display: flex;
@@ -45,21 +55,35 @@ width: 35px;
 
 
 .footer_menu{
-
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 .footer_menu h3{
+    color: rgb(0 0 0) !important;
  font-size: 16px;
  margin-bottom: 10px;
 }
-.footer_menu_item a{
-    color: rgb(0 0 0);
-    padding: 0px;
-    /* position: relative; */
-    text-decoration: none;
-    text-transform: capitalize;
+.footer_menu_item ul li a {
+    color: rgb(0 0 0) !important;
+    text-transform: lowercase;
 }
+.footer_menu_item ul li {    margin-top: 5px;}
 .footer_container a{
     transition: all 5s;
 }
 
 
+@media(max-width:600px){
+    .footer_container{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 20px;
+    }
+    .footer_menu{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
+}
