--- a/src/style.css
+++ b/src/style.css
@@ -6,8 +6,8 @@ padding: 0;
 }
 
 #root{
-    background: rgb(84,0,87);
-background: linear-gradient(0deg, rgba(84,0,87,1) 0%, rgba(0,0,0,1) 21%);
+    background: rgb(0, 0, 0);
+
 color: #fff;
 font-family: "Unbounded", sans-serif;
   
